add VisualAccumulatorImpl to SequentialSearchST

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,18 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+/.idea/libraries/
+/.idea/modules.xml
+/.idea/uiDesigner.xml
+/.idea/copyright/
+/.idea/thriftCompiler.xml
+/.idea/.name
+/.idea/compiler.xml
+/.idea/misc.xml
+/.idea/codeStyleSettings.xml
+/.idea/vcs.xml
+/.idea/artifacts/
+/.idea/inspectionProfiles/
+/.idea/workspace.xml
+/.idea/encodings.xml
+/AlgorithmsLab.iml
