--- a/src/test/resources/config/props/graph-undirected.props
+++ b/src/test/resources/config/props/graph-undirected.props
@@ -6,3 +6,7 @@ graph.undirected.data.routes.delimiter.path=" "
 graph.undirected.data.movies.path=algorithms/graph/process/movies.txt
 graph.undirected.data.movies.delimiter.path="/"
 graph.undirected.source.vertex.0=0
+
+#----------------directed
+graph.directed.data.tiny.path=algorithms/graph/directed/tinyG.txt
+graph.directed.data.no_cycle.tiny.path=algorithms/graph/directed/noCycleTinyG.txt
