--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <modules>
         <module>practice</module>
         <module>problems</module>
+        <module>database</module>
+        <module>network</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -93,7 +95,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.36</version>
+            <version>1.2.76</version>
         </dependency>
 
 
