--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>problems</module>
         <module>database</module>
         <module>network</module>
+        <module>algorithm-util</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -24,6 +25,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>heylichen</groupId>
+            <artifactId>algorithm-util</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
